update flask server
