# AROF/agent/python-flask-server/swagger_server/models/operations.py
@@ -6,7 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.operation import Operation  # noqa: F401,E501
+from swagger_server.models.operations_inner import OperationsInner  # noqa: F401,E501
 from swagger_server import util
 
 
