# AROF/agent/python-flask-server/swagger_server/models/operations_inner.py
@@ -9,18 +9,18 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class Operation(Model):
+class OperationsInner(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, arof_id: int=None, laser_enable: bool=None):  # noqa: E501
-        """Operation - a model defined in Swagger
+        """OperationsInner - a model defined in Swagger
 
-        :param arof_id: The arof_id of this Operation.  # noqa: E501
+        :param arof_id: The arof_id of this OperationsInner.  # noqa: E501
         :type arof_id: int
-        :param laser_enable: The laser_enable of this Operation.  # noqa: E501
+        :param laser_enable: The laser_enable of this OperationsInner.  # noqa: E501
         :type laser_enable: bool
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class Operation(Model):
         self._laser_enable = laser_enable
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Operation':
+    def from_dict(cls, dikt) -> 'OperationsInner':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The operation of this Operation.  # noqa: E501
-        :rtype: Operation
+        :return: The operations_inner of this OperationsInner.  # noqa: E501
+        :rtype: OperationsInner
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def arof_id(self) -> int:
-        """Gets the arof_id of this Operation.
+        """Gets the arof_id of this OperationsInner.
 
 
-        :return: The arof_id of this Operation.
+        :return: The arof_id of this OperationsInner.
         :rtype: int
         """
         return self._arof_id
 
     @arof_id.setter
     def arof_id(self, arof_id: int):
-        """Sets the arof_id of this Operation.
+        """Sets the arof_id of this OperationsInner.
 
 
-        :param arof_id: The arof_id of this Operation.
+        :param arof_id: The arof_id of this OperationsInner.
         :type arof_id: int
         """
 
@@ -70,20 +70,20 @@ class Operation(Model):
 
     @property
     def laser_enable(self) -> bool:
-        """Gets the laser_enable of this Operation.
+        """Gets the laser_enable of this OperationsInner.
 
 
-        :return: The laser_enable of this Operation.
+        :return: The laser_enable of this OperationsInner.
         :rtype: bool
         """
         return self._laser_enable
 
     @laser_enable.setter
     def laser_enable(self, laser_enable: bool):
-        """Sets the laser_enable of this Operation.
+        """Sets the laser_enable of this OperationsInner.
 
 
-        :param laser_enable: The laser_enable of this Operation.
+        :param laser_enable: The laser_enable of this OperationsInner.
         :type laser_enable: bool
         """
 
